<resources>
    <string name="app_name">guk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="greetings">Hello, </string>
    <string name="login_success">Login Success</string>

    <!--    Comment-->
    <string name="comment_back">Our Story</string>
    <string name="add_comment_hint">Add a comment...</string>
    <string name="comment_button">Comment</string>

    <!--    Home-->
    <string name="years_old"> years old</string>
    <string name="recent_tag">Recent</string>

    <!--    Dog Detail-->
    <string name="adopt_me_back">Adopt Me</string>
    <string name="adopt_button">ADOPT</string>
    <string name="update_button">UPDATE</string>
    <string name="delete_button">DELETE</string>
    <string name="unadopted">Unadopted</string>

    <!--    Main-->
    <string name="email">Email</string>
    <string name="hint_email">example@mail.com</string>
    <string name="password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="or_button">OR</string>
    <string name="login_google_button">LOGIN WITH GOOGLE</string>
    <string name="dont_have_account">Don’t have an account? Register here</string>

    <!--    Notification-->
    <string name="notification_back">Notification</string>

    <!--    Register-->
    <string name="upload_profile">Upload Profile Picture</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="hint_address">Example Street 123</string>
    <string name="register_button">REGISTER</string>

    <!--    Settings-->
    <string name="settings">Settings</string>
    <string name="font_size">Font Size</string>
    <string name="push_notification">Push Notification</string>

    <!--    Update Dog-->
    <string name="update_dog">Update Dog</string>
    <string name="breed">Breed</string>
    <string name="description">Description</string>
    <string name="description_hint">This dog is so cute</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!--    Add Dog-->
    <string name="add_dog">Add Dog</string>
    <string name="picture">Picture</string>

    <!--    Add Story-->
    <string name="add_your_story">Add Your Story</string>
    <string name="content">Content</string>
    <string name="content_hint">Express your story here...</string>
    <string name="add_story">Add Story</string>

    <!--    Profile-->
    <string name="profile_adoption">Your Adoptions</string>
    <string name="profile_donation">Your Donations</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="points">Points</string>
    <string name="minimum_point">Minimum Points:</string>


    <!--    Search-->
    <string name="search">Search Here...</string>
    <string name="age">Age</string>

    <!--    Donation-->
    <string name="donation_matters">Your Donation Matters!</string>
    <string name="prompt">What a privilege to be here on the planet to contribute your unique donation to these homeless dogs.<br />You can donate to: <b>604 123 1234</b> (BCA)</string>
    <string name="bank_account_holder">Bank Account Holder</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="donation_amount">Donation Amount (IDR)</string>
    <string name="proof">Upload Payment Proof</string>
    <string name="notes">Additional Notes</string>
    <string name="notes_hint">Please save this dogs!</string>
    <string name="donate">Donate</string>


    <!--    Story Template-->
    <string name="view_all_comments">View All Comments</string>

    <!--    TnC-->
    <string name="guk_tnc">guk\'s Terms and Condition</string>
    <string name="tnc_content">By installing, accessing or using any mobile apps, email newsletters and subscriptions, and other digital properties on which these terms are posted or referenced (together, “online services”), you are entering into a binding agreement with guk Company, which controls and operates the online services from its headquarters at 110 Beenus Alam Sutera. By accepting these terms, you also understand and consent to guk\'s Privacy Statement, which is incorporated into, and part of, this agreement. Our Privacy Statement describes how we collect, use and share information. By accepting these terms, you understand and agree that, as stated, you are waiving your right to resolve any dispute through other processes that could be available to you, such as court actions or administrative proceedings. It also means that you are waiving your rights to a trial by jury or to combine your dispute with others in a class action.</string>
    <string name="tnc_agree">I agree with the terms and condition</string>
    <string name="tnc_error_msg">You must agree with the terms and condition!</string>


    <!--    User Dialog-->
    <string name="user_data">User\'s Data</string>
    <string name="user_name">Name: </string>
    <string name="user_address">Address: </string>
    <string name="user_phone">Phone Number: </string>

    <!--    Tabs-->
    <string name="adopt_me_title">Adopt Me</string>
    <string name="our_story_title">Our Story</string>
    <string name="donations_title">Donations</string>
    <string name="adoptions_title">Adoptions</string>

    <!--    History-->
    <string name="donated">Donated </string>
    <string name="donated_lowercase"> donated </string>
    <string name="adopted">Adopted </string>
    <string name="adopted_lowercase"> adopted </string>

    <!--    Toast-->
    <string name="thank_you_adoption">Thank you for your Adoption! Please wait for our admin to check and review your adoption.</string>
    <string name="adoption_approved">Adoption Approved!</string>
    <string name="adoption_rejected">Adoption Rejected!</string>
    <string name="add_dog_toast">Dog added successfully!</string>
    <string name="update_dog_toast">Dog updated successfully!</string>

    <!--    Upload-->
    <string name="uploading">Uploading...</string>
    <string name="uploaded">Uploaded</string>
    <string name="upload_failed">Image upload failed</string>

    <!--    Notification-->
    <string name="notif_donation">Your donation has been </string>
    <string name="notif_adoption">Your adoption has been </string>
    <string name="notif_approved">approved!</string>
    <string name="notif_rejected">rejected!</string>
    <string name="notif_badge">You have earn a new badge!</string>

    <!--    Donation-->
    <string name="donation_approved">Donation approved!</string>
    <string name="donation_rejected">Donation Rejected!</string>
    <string name="donation_insert">Thank you for your Donation! Please wait for our admin to check and review your donation.</string>
    <string name="story_inserted">Story added successfully!</string>
    <string name="register_success">Register success!</string>
    <string name="register_fail">Register fail!</string>
    <string name="name_error_msg">Name must be filled!</string>
    <string name="email_error_msg">Email must be filled!</string>
    <string name="password_error_msg">Password must be filled!</string>
    <string name="confirm_password_error_msg">Password and Confirm Password must be the same!</string>
    <string name="phone_error_msg">Phone number must be filled!</string>
    <string name="address_error_msg">Address must be filled!</string>
    <string name="picture_error_msg">Picture must be chosen!</string>
    <string name="login_fail">Incorrect Credential!</string>
    <string name="description_error_msg">Description must be filled!</string>
    <string name="gender_error_msg">Gender must be filled!</string>
    <string name="bank_number_error_msg">Bank Account Number must be filled!</string>
    <string name="donation_amount_error_msg">Donation amount must be filled!</string>
    <string name="story_content_error_msg">Content must be filled!</string>
    <string name="badge">Badge</string>
    <string name="about_badge_and_points">About Badge and Points</string>
    <string name="badge_point_description">You will receive 100 points everytime you adopted a dog or everytime you donated IDR 100.000. (You will receive the points after Admin has approved your action)</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="diamond">Diamond</string>
    <string name="save_settings">Save Settings</string>

</resources>