<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/tnc_dialog_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="right"
                android:src="@drawable/close_x"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guk_tnc"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tnc_content"
                android:justificationMode="inter_word"
                />

            <CheckBox
                android:id="@+id/tnc_agree"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tnc_agree"
                />
            <Button
                android:id="@+id/tnc_adopt_dog_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/adopt_button"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textFontWeight="800" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>