<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDonateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="50dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donation_matters"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textFontWeight="600"
            android:textSize="24sp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/donate_prompt_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/grey"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bank_account_holder"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/donate_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:hint="John Doe"
                    android:textColorHint="@color/grey"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bank_account_number"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/donate_number_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:hint="1234 1234 1234 1234"
                    android:textColorHint="@color/grey"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/donation_amount"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:inputType="number"
                    android:id="@+id/donate_amount_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:hint="1000000"
                    android:textColorHint="@color/grey"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textColor="@color/black" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/proof"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:id="@+id/donate_choose_picture_btn"
                    >
                    <ImageView
                        android:id="@+id/donate_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/add_image"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/notes"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/donate_notes_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_text"
                    android:hint="@string/notes_hint"
                    android:textColorHint="@color/grey"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:textColor="@color/black" />
                <Button
                    android:id="@+id/donate_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/donate"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textFontWeight="800" />
            </LinearLayout>

        </ScrollView>



    </LinearLayout>

</FrameLayout>