<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingHorizontal="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_your_story"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="24dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/add_story_choose_btn"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/add_story_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/add_image" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/content"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/add_story_content_txt"
                    android:layout_width="match_parent"
                    android:background="@drawable/input_text"
                    android:hint="@string/content_hint"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:gravity="top"
                    android:inputType="text|textMultiLine"
                    android:layout_height="100dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

                <Button
                    android:id="@+id/add_story_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/add_story"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textFontWeight="800" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>