<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/user_dialog_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="right"
                android:src="@drawable/close_x"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_data"
                android:textSize="20sp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                >
                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/dialog_user_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/add_image" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dialog_user_name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    />
                <TextView
                    android:id="@+id/dialog_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": John Doe"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/dialog_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email: "
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dialog_user_address_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_address"
                    />
                <TextView
                    android:id="@+id/dialog_user_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": Address"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dialog_user_phone_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_phone"
                    />
                <TextView
                    android:id="@+id/dialog_user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": 08123345645 "
                    />
            </LinearLayout>






        </LinearLayout>
</LinearLayout>