<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/setting_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/primary"
            android:textFontWeight="600" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/setting_bg"
        android:transitionName="rounded-bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_edge"
        android:paddingHorizontal="50dp"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/font_size"
                android:textColor="@color/black"/>

            <LinearLayout
                android:background="@drawable/input_text"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <Spinner
                    android:theme="@style/Theme.AppCompat.Light"
                    android:padding="0dp"
                    android:layout_margin="0dp"
                    android:dropDownWidth="match_parent"
                    android:popupBackground="@color/white"
                    android:foregroundTint="@color/black"
                    android:id="@+id/setting_font_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/push_notification"
                android:textColor="@color/black"/>

            <LinearLayout
                android:background="@drawable/input_text"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <Spinner
                    android:theme="@style/Theme.AppCompat.Light"
                    android:padding="0dp"
                    android:layout_margin="0dp"
                    android:dropDownWidth="match_parent"
                    android:popupBackground="@color/white"
                    android:foregroundTint="@color/black"
                    android:id="@+id/setting_notification_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/setting_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/save_settings"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textFontWeight="800" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>